--- a/generator.html
+++ b/generator.html
@@ -16,11 +16,11 @@
           <input type="text" class="feat-name" placeholder="Feat Name" autocomplete="off">
           <select class="action-cost" autocomplete="off">
             <option value=""></option>
-            <option value=1>1</option>
-            <option value=2>2</option>
-            <option value=3>3</option>
-            <option value=4>4</option>
-            <option value=5>5</option>
+            <option value="1">1</option>
+            <option value="2">2</option>
+            <option value="3">3</option>
+            <option value="4">4</option>
+            <option value="5">5</option>
           </select>
         </div>
         <hr/>
