Allow for zero traits
Traits start default at zero and if none are added then the section is hidden. Rather than duplicating the trait it manually creates a new one.

--- a/generator.html
+++ b/generator.html
@@ -25,12 +25,9 @@
         </div>
         <hr/>
         <div class="feat-traits" id="feat-traits">
-          <span contenteditable="true" type="text" class="feat-trait" size=1 autocomplete="off" id="baseTrait">
-            Trait
-          </span>
           <button class="add-trait" id="add-trait">+</button>
         </div>
-        <hr/>
+        <hr class="trait-hr"/>
       </div>
     </div>
   </div>
