Single line feat info

--- a/generator.html
+++ b/generator.html
@@ -28,6 +28,19 @@
           <button class="add-trait" id="add-trait">+</button>
         </div>
         <hr class="trait-hr"/>
+        <div class="feat-info">
+          <p>Frequency:</p>
+          <input type="text" class="feat-info-input" placeholder="Frequency" autocomplete="off">
+        </div>
+        <div class="feat-info">
+          <p>Trigger:</p>
+          <input type="text" class="feat-info-input" placeholder="Trigger" autocomplete="off">
+        </div>
+        <div class="feat-info">
+          <p>Requirement:</p>
+          <input type="text" class="feat-info-input" placeholder="Requirement" autocomplete="off">
+        </div>
+        <hr class="info-hr"/>
       </div>
     </div>
   </div>
