Multiline feat info

--- a/generator.html
+++ b/generator.html
@@ -29,16 +29,22 @@
         </div>
         <hr class="trait-hr"/>
         <div class="feat-info">
-          <p>Frequency:</p>
-          <input type="text" class="feat-info-input" placeholder="Frequency" autocomplete="off">
+          <p>
+            Frequency:
+            <span contenteditable="true" class="feat-info-input" placeholder="Frequency" autocomplete="off"></span>
+          </p>
         </div>
         <div class="feat-info">
-          <p>Trigger:</p>
-          <input type="text" class="feat-info-input" placeholder="Trigger" autocomplete="off">
+          <p>
+            Trigger:
+            <span contenteditable="true" class="feat-info-input" placeholder="Trigger" autocomplete="off"></span>
+          </p>
         </div>
         <div class="feat-info">
-          <p>Requirement:</p>
-          <input type="text" class="feat-info-input" placeholder="Requirement" autocomplete="off">
+          <p>
+            Requirement:
+            <span contenteditable="true" class="feat-info-input" placeholder="Requirement" autocomplete="off"></span>
+          </p>
         </div>
         <hr class="info-hr"/>
       </div>
