--- a/generator.html
+++ b/generator.html
@@ -47,6 +47,10 @@
           </p>
         </div>
         <hr class="info-hr"/>
+        <div class="feat-description">
+            <span contenteditable="true" class="feat-info-input" placeholder="Description" autocomplete="off"></span>
+        </div>
+        <hr/>
       </div>
     </div>
   </div>
