Hide last hr line

--- a/generator.html
+++ b/generator.html
@@ -28,6 +28,8 @@
           <button class="add-trait" id="add-trait">+</button>
         </div>
         <hr class="trait-hr"/>
+    
+        <div>
         <div class="feat-info">
           <p>
             Frequency:
@@ -47,10 +49,49 @@
           </p>
         </div>
         <hr class="info-hr"/>
-        <div class="feat-description">
-            <span contenteditable="true" class="feat-info-input" placeholder="Description" autocomplete="off"></span>
         </div>
-        <hr/>
+
+        <div class="possible-final">
+        <div class="feat-description">
+            <span contenteditable="true" class="feat-info-input" autocomplete="off">Description</span>
+        </div>
+        <hr class="final-hr"/>
+        </div>
+
+        <div class="possible-final">
+        <div class="feat-info">
+            <span contenteditable="true" class="feat-info-input" placeholder="Other actions" autocomplete="off"></span>
+        </div>
+        <hr class="final-hr"/>
+        </div>
+
+        <div class="possible-final">
+        <div class="feat-info">
+          <p>
+            Critical Success:
+            <span contenteditable="true" class="feat-info-input" placeholder="Critical Success" autocomplete="off"></span>
+          </p>
+        </div>
+        <div class="feat-info">
+          <p>
+            Success:
+            <span contenteditable="true" class="feat-info-input" placeholder="Success" autocomplete="off"></span>
+          </p>
+        </div>
+        <div class="feat-info">
+          <p>
+            Failure:
+            <span contenteditable="true" class="feat-info-input" placeholder="Failure" autocomplete="off"></span>
+          </p>
+        </div>
+        <div class="feat-info">
+          <p>
+            Critical Failure:
+            <span contenteditable="true" class="feat-info-input" placeholder="Critical Failure" autocomplete="off"></span>
+          </p>
+        </div>
+        <hr class="final-hr"/>
+        </div>
       </div>
     </div>
   </div>
