Add cut guidelines

--- a/generator.html
+++ b/generator.html
@@ -9,6 +9,23 @@
 </head>
 
 <body>
+  <div class="vertical-lines top">
+    <div class="vertical-line"></div>
+    <div class="vertical-line"></div>
+    <div class="vertical-line"></div>
+  </div>
+  <div class="vertical-lines bottom">
+    <div class="vertical-line"></div>
+    <div class="vertical-line"></div>
+    <div class="vertical-line"></div>
+  </div>
+  <div class="horizontal-lines left">
+    <div class="horizontal-line"></div>
+  </div>
+  <div class="horizontal-lines right">
+    <div class="horizontal-line"></div>
+  </div>
+
   <div class="page">
     <div class="grid" id="grid">
       <div class="feat-card" id="card0">
