--- a/generator.html
+++ b/generator.html
@@ -29,6 +29,7 @@
   <div class="page">
     <div class="grid" id="grid">
       <div class="feat-card" id="card0">
+      <div class="feat-card-inner">
         <div id="feat-header">
           <input type="text" class="feat-name" placeholder="Feat Name" autocomplete="off">
           <select class="action-cost" autocomplete="off">
@@ -110,6 +111,7 @@
         </div>
         <hr class="final-hr"/>
         </div>
+      </div>
       </div>
     </div>
   </div>
