Allow symbol conversion

--- a/generator.html
+++ b/generator.html
@@ -71,7 +71,7 @@
         </div>
 
         <div class="possible-final">
-        <div class="feat-description">
+        <div class="feat-info">
             <span contenteditable="true" class="feat-info-input" autocomplete="off">Description</span>
         </div>
         <hr class="final-hr"/>
