--- a/feats.html
+++ b/feats.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="feats.css">
   <script src="feats.js"></script>
 </head>
 
