Add spell template generator

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <h1>Pathfinder Card Generators</h1>
     <br/>
     <ul>
-        <li><a href="feats.html">Feat Generator</a></li>
+      <li><a href="feats.html">Feat Generator</a></li>
+      <li><a href="spells.html">Spell Generator</a></li>
     </ul>
 </body>
 </html>
