--- a/spells.html
+++ b/spells.html
@@ -30,6 +30,7 @@
     <div class="grid" id="grid">
       <div class="feat-card" id="card0">
         <div class="feat-card-inner">
+          <input type="text" class="spell-level" placeholder="Spell Level" autocomplete="off">
           <div id="feat-header">
             <input type="text" class="feat-name" placeholder="Spell Name" autocomplete="off">
             <select class="action-cost" autocomplete="off">
@@ -48,7 +49,7 @@
           </div>
           <hr class="trait-hr" />
 
-          <div>
+          <div class="possible-final">
             <div class="feat-info">
               <p>
                 Cast:
