Add section for other action costs

--- a/spells.html
+++ b/spells.html
@@ -98,6 +98,13 @@
 
           <div class="possible-final">
             <div class="feat-info">
+              <span contenteditable="true" class="feat-info-input" placeholder="Other actions" autocomplete="off"></span>
+            </div>
+            <hr class="final-hr" />
+          </div>
+
+          <div class="possible-final">
+            <div class="feat-info">
               <p>
                 Critical Success:
                 <span contenteditable="true" class="feat-info-input" placeholder="Critical Success" autocomplete="off"></span>
