--- a/index.html
+++ b/index.html
@@ -5,14 +5,173 @@
   <meta charset="UTF-8">
 
   <link rel="stylesheet" href="style.css">
+  <script src="cards.js"></script>
 </head>
 
 <body>
-    <h1>Pathfinder Card Generators</h1>
-    <br/>
-    <ul>
-      <li><a href="feats.html">Feat Generator</a></li>
-      <li><a href="spells.html">Spell Generator</a></li>
-    </ul>
+  <div class="vertical-lines top">
+    <div class="vertical-line"></div>
+    <div class="vertical-line"></div>
+    <div class="vertical-line"></div>
+  </div>
+  <div class="vertical-lines bottom">
+    <div class="vertical-line"></div>
+    <div class="vertical-line"></div>
+    <div class="vertical-line"></div>
+  </div>
+  <div class="horizontal-lines left">
+    <div class="horizontal-line"></div>
+  </div>
+  <div class="horizontal-lines right">
+    <div class="horizontal-line"></div>
+  </div>
+
+  <div class="page">
+    <div class="grid" id="grid">
+      <div class="feat-card" id="card0">
+        <div class="feat-card-inner">
+          <input type="text" class="spell-level" placeholder="Spell Level" autocomplete="off">
+          <div id="feat-header">
+            <input type="text" class="feat-name" placeholder="Spell Name" autocomplete="off">
+            <select class="action-cost" autocomplete="off">
+              <option value=""></option>
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+          </div>
+          <hr />
+
+          <div class="feat-traits" id="feat-traits">
+            <button class="add-trait" id="add-trait">+</button>
+          </div>
+          <hr class="trait-hr" />
+
+          <div class="possible-final">
+            <div class="feat-info">
+              <p>
+                Cast:
+                <span contenteditable="true" class="feat-info-input" placeholder="Cast" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Trigger:
+                <span contenteditable="true" class="feat-info-input" placeholder="Trigger" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Range:
+                <span contenteditable="true" class="feat-info-input" placeholder="Range" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Area:
+                <span contenteditable="true" class="feat-info-input" placeholder="Area" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Targets:
+                <span contenteditable="true" class="feat-info-input" placeholder="Targets" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Saving Throw:
+                <span contenteditable="true" class="feat-info-input" placeholder="Saving Throw" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Duration:
+                <span contenteditable="true" class="feat-info-input" placeholder="Duration" autocomplete="off"></span>
+              </p>
+            </div>
+            <hr class="final-hr" />
+          </div>
+
+          <div>
+            <div class="feat-info">
+              <p>
+                Frequency:
+                <span contenteditable="true" class="feat-info-input" placeholder="Frequency" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Trigger:
+                <span contenteditable="true" class="feat-info-input" placeholder="Trigger" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Requirement:
+                <span contenteditable="true" class="feat-info-input" placeholder="Requirement" autocomplete="off"></span>
+              </p>
+            </div>
+            <hr class="info-hr" />
+          </div>
+
+          <div class="possible-final">
+            <div class="feat-info">
+              <span contenteditable="true" class="feat-info-input" autocomplete="off">Description</span>
+            </div>
+            <hr class="final-hr" />
+          </div>
+
+          <div class="possible-final">
+            <div class="feat-info">
+              <span contenteditable="true" class="feat-info-input" placeholder="Other actions" autocomplete="off"></span>
+            </div>
+            <hr class="final-hr" />
+          </div>
+
+          <div class="possible-final">
+            <div class="feat-info">
+              <p>
+                Critical Success:
+                <span contenteditable="true" class="feat-info-input" placeholder="Critical Success" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Success:
+                <span contenteditable="true" class="feat-info-input" placeholder="Success" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Failure:
+                <span contenteditable="true" class="feat-info-input" placeholder="Failure" autocomplete="off"></span>
+              </p>
+            </div>
+            <div class="feat-info">
+              <p>
+                Critical Failure:
+                <span contenteditable="true" class="feat-info-input" placeholder="Critical Failure" autocomplete="off"></span>
+              </p>
+            </div>
+            <hr class="final-hr" />
+          </div>
+
+          <div class="possible-final heightened">
+            <div class="feat-info" id="baseHeightened">
+              <p>
+                Heightened (<span style="font-weight:bold" contenteditable="true" class="feat-info-input" placeholder="Level" autocomplete="off"></span>)
+                <span contenteditable="true" class="feat-info-input" placeholder="Heightened effect" autocomplete="off"></span>
+              </p>
+            </div>
+            <button class="add-heightened">+</button>
+            <hr class="final-hr" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
