--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
 
-  <link rel="stylesheet" href="style.css">
-  <script src="cards.js"></script>
+  <link rel="stylesheet" href="./style.css">
+  <script src="./cards.js"></script>
 </head>
 
 <body>
